force-app/main/default/objects/Training_Program_Feedback__c/fields/Phase_2_Managing_change_evening_Inst_Eff__c.field-meta.xml
<CustomField>
    <fullName>Phase_2_Managing_change_evening_Inst_Eff__c</fullName>
    <label>Phase 2-Managing change evening-Inst Eff</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>