force-app/main/default/objects/Training_Program_Feedback__c/fields/Phase_3_panel_presentations_Inst_Eff__c.field-meta.xml
<CustomField>
    <fullName>Phase_3_panel_presentations_Inst_Eff__c</fullName>
    <label>Phase 3-panel presentations-Inst Eff</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>