force-app/main/default/objects/Training_Program_Feedback__c/fields/Post_Program_emails_supported_3_mo__c.field-meta.xml
<CustomField>
    <fullName>Post_Program_emails_supported_3_mo__c</fullName>
    <label>Post Program emails supported (3 mo)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>