force-app/main/default/objects/Training_Program_Feedback__c/fields/PP_Research_Hub__c.field-meta.xml
<CustomField>
    <fullName>PP_Research_Hub__c</fullName>
    <label>PP - Research Hub</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>