force-app/main/default/objects/Training_Program_Feedback__c/fields/PP_Use_Proxima__c.field-meta.xml
<CustomField>
    <fullName>PP_Use_Proxima__c</fullName>
    <description>This question changed on 1/27/22 from Post Program, How likely are you to use...&quot; to &quot;Applying Proxima during the program.  Changed field label to match.</description>
    <label>Applying Proxima</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>