force-app/main/default/objects/Training_Program_Feedback__c/fields/Pre_work_assignments__c.field-meta.xml
<CustomField>
    <fullName>Pre_work_assignments__c</fullName>
    <label>Pre-work assignments</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>