force-app/main/default/objects/Training_Program_Feedback__c/fields/Pre_work_preparation__c.field-meta.xml
<CustomField>
    <fullName>Pre_work_preparation__c</fullName>
    <label>Pre-work preparation</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>