force-app/main/default/objects/Training_Program_Feedback__c/fields/Prepare_for_a_PCT_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Prepare_for_a_PCT_Assessment__c</fullName>
    <label>Prepare for a PCT Assessment</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>