force-app/main/default/objects/Training_Program_Feedback__c/fields/Preparing_for_a_program_MGRInstEff__c.field-meta.xml
<CustomField>
    <fullName>Preparing_for_a_program_MGRInstEff__c</fullName>
    <label>Preparing for a program-MGRInstEff</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>