force-app/main/default/objects/Training_Program_Feedback__c/fields/Preparing_for_change_Inst_Eff__c.field-meta.xml
<CustomField>
    <fullName>Preparing_for_change_Inst_Eff__c</fullName>
    <label>Preparing for change-Inst Eff</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>