force-app/main/default/objects/Training_Program_Feedback__c/fields/Prework_prepared_me_for_the_program__c.field-meta.xml
<CustomField>
    <fullName>Prework_prepared_me_for_the_program__c</fullName>
    <label>Prework prepared me for the program</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>