force-app/main/default/objects/Training_Program_Feedback__c/fields/Proactively_apply_ADKAR_Model__c.field-meta.xml
<CustomField>
    <fullName>Proactively_apply_ADKAR_Model__c</fullName>
    <label>Proactively apply ADKAR Model</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>