force-app/main/default/objects/Training_Program_Feedback__c/fields/Producer_do_different_to_improve__c.field-meta.xml
<CustomField>
    <fullName>Producer_do_different_to_improve__c</fullName>
    <inlineHelpText>Training Success Specialist do different to improve</inlineHelpText>
    <label>TSS do different to improve</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>