force-app/main/default/objects/Training_Program_Feedback__c/fields/Program_Content_EMP_InstEff__c.field-meta.xml
<CustomField>
    <fullName>Program_Content_EMP_InstEff__c</fullName>
    <label>Program Content-EMP InstEff</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>