force-app/main/default/objects/Training_Program_Feedback__c/fields/Program_Content_Organized_Easy__c.field-meta.xml
<CustomField>
    <fullName>Program_Content_Organized_Easy__c</fullName>
    <description>This field was called &quot;Program Content Organized &amp; Easy&quot; until a change to the suevey on 1/27/22.   The new question asked is &quot;The program materials were easy to follow.&quot;.  Edwina and Mary decided to repurpose the same field to capture this data.</description>
    <label>Program Materials Easy to Follow</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>