force-app/main/default/objects/Training_Program_Feedback__c/fields/Program_improvement_recommendations__c.field-meta.xml
<CustomField>
    <fullName>Program_improvement_recommendations__c</fullName>
    <label>Program improvement recommendations</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>