force-app/main/default/objects/Training_Program_Feedback__c/fields/Program_material_value__c.field-meta.xml
<CustomField>
    <fullName>Program_material_value__c</fullName>
    <label>Program material value</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>