force-app/main/default/objects/Training_Program_Feedback__c/fields/Program_philosophy_principlesDPR_Ability__c.field-meta.xml
<CustomField>
    <fullName>Program_philosophy_principlesDPR_Ability__c</fullName>
    <label>Program philosophy&amp;principlesDPR-Ability</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>