force-app/main/default/objects/Training_Program_Feedback__c/fields/Program_prep_effectiveness__c.field-meta.xml
<CustomField>
    <fullName>Program_prep_effectiveness__c</fullName>
    <label>Program prep effectiveness</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>