force-app/main/default/objects/Training_Program_Feedback__c/fields/Program_success_factors_3day_Inst_Eff__c.field-meta.xml
<CustomField>
    <fullName>Program_success_factors_3day_Inst_Eff__c</fullName>
    <label>Program success factors 3 day-Inst Eff</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>