force-app/main/default/objects/Training_Program_Feedback__c/fields/Program_success_factors_DPR_Ability__c.field-meta.xml
<CustomField>
    <fullName>Program_success_factors_DPR_Ability__c</fullName>
    <label>Program success factors DPR-Ability</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>