force-app/main/default/objects/Training_Program_Feedback__c/fields/Program_will_increase_CM_Effectiveness__c.field-meta.xml
<CustomField>
    <fullName>Program_will_increase_CM_Effectiveness__c</fullName>
    <label>Program will increase CM Effectiveness</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>