force-app/main/default/objects/Training_Program_Feedback__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Training Programs Feedback</relationshipLabel>
    <relationshipName>Training_Programs_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>