force-app/main/default/objects/Training_Program_Feedback__c/fields/Quickly_put_my_learning_into_action__c.field-meta.xml
<CustomField>
    <fullName>Quickly_put_my_learning_into_action__c</fullName>
    <label>Quickly put my learning into action</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>