force-app/main/default/objects/Training_Program_Feedback__c/fields/Reactively_apply_the_ADKAR_Model__c.field-meta.xml
<CustomField>
    <fullName>Reactively_apply_the_ADKAR_Model__c</fullName>
    <label>Reactively apply the ADKAR Model</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>