force-app/main/default/objects/Training_Program_Feedback__c/fields/Reason_for_Score__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Score__c</fullName>
    <inlineHelpText>What is the primary reason for your recommendation score?</inlineHelpText>
    <label>Reason for Score</label>
    <type>TextArea</type>
</CustomField>