force-app/main/default/objects/Training_Program_Feedback__c/fields/Recommend_Instructor__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Instructor__c</fullName>
    <label>Recommend Instructor</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>