force-app/main/default/objects/Training_Program_Feedback__c/fields/Recommend_Program_1_yr__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Program_1_yr__c</fullName>
    <label>Recommend Program (1 yr)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>