force-app/main/default/objects/Training_Program_Feedback__c/fields/Recommend_Program__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Program__c</fullName>
    <label>Recommend Program</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>