force-app/main/default/objects/Training_Program_Feedback__c/fields/Recommend_Prosci_Advisory__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Prosci_Advisory__c</fullName>
    <inlineHelpText>How likely are you to recommend Prosci Advisory Services to others?</inlineHelpText>
    <label>Recommend Prosci Advisory</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>