force-app/main/default/objects/Training_Program_Feedback__c/fields/Reinforcing_change_Inst_Eff__c.field-meta.xml
<CustomField>
    <fullName>Reinforcing_change_Inst_Eff__c</fullName>
    <label>Reinforcing change-Inst Eff</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>