force-app/main/default/objects/Training_Program_Feedback__c/fields/Resistance_Mgt_Ability__c.field-meta.xml
<CustomField>
    <fullName>Resistance_Mgt_Ability__c</fullName>
    <label>Resistance Mgt-Ability</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>