force-app/main/default/objects/Training_Program_Feedback__c/fields/Resistance_Mgt_Inst_Eff__c.field-meta.xml
<CustomField>
    <fullName>Resistance_Mgt_Inst_Eff__c</fullName>
    <label>Resistance Mgt-Inst Eff</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>