force-app/main/default/objects/Training_Program_Feedback__c/fields/Resolve_Persistent_Barrier_Points__c.field-meta.xml
<CustomField>
    <fullName>Resolve_Persistent_Barrier_Points__c</fullName>
    <label>Resolve Persistent Barrier Points</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>