force-app/main/default/objects/Training_Program_Feedback__c/fields/ROI_and_Why_CM_Ability__c.field-meta.xml
<CustomField>
    <fullName>ROI_and_Why_CM_Ability__c</fullName>
    <label>ROI and Why CM-Ability</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>