force-app/main/default/objects/Training_Program_Feedback__c/fields/ROI_and_why_CM_Inst_Eff__c.field-meta.xml
<CustomField>
    <fullName>ROI_and_why_CM_Inst_Eff__c</fullName>
    <label>ROI and Why CM-Inst Eff</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>