force-app/main/default/objects/Training_Program_Feedback__c/fields/Solution_design_Ability__c.field-meta.xml
<CustomField>
    <fullName>Solution_design_Ability__c</fullName>
    <label>Solution design-Ability</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>