force-app/main/default/objects/Training_Program_Feedback__c/fields/Sponsor_Engagement_Coaching_Inst_Eff__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Engagement_Coaching_Inst_Eff__c</fullName>
    <label>Sponsor Engagement &amp; Coaching-Inst Eff</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>