force-app/main/default/objects/Training_Program_Feedback__c/fields/Sponsorship_Ability__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Ability__c</fullName>
    <label>Sponsorship-Ability</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>