force-app/main/default/objects/Training_Program_Feedback__c/fields/Sponsorship_Inst_Eff__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Inst_Eff__c</fullName>
    <label>Sponsorship-Inst Eff</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>