force-app/main/default/objects/Training_Program_Feedback__c/fields/Taking_control_of_the_change_Ability__c.field-meta.xml
<CustomField>
    <fullName>Taking_control_of_the_change_Ability__c</fullName>
    <label>Taking control of the change-Ability</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>