force-app/main/default/objects/Training_Program_Feedback__c/fields/Templates_Ability__c.field-meta.xml
<CustomField>
    <fullName>Templates_Ability__c</fullName>
    <label>Templates-Ability</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>