force-app/main/default/objects/Training_Program_Feedback__c/fields/Timelines_of_Change_Mgt__c.field-meta.xml
<CustomField>
    <fullName>Timelines_of_Change_Mgt__c</fullName>
    <label>Timelines of Change Mgt</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>