force-app/main/default/objects/Training_Program_Feedback__c/fields/Track_ADKAR_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Track_ADKAR_Outcomes__c</fullName>
    <label>Track ADKAR Outcomes</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>