force-app/main/default/objects/Training_Program_Feedback__c/fields/Track_and_Adapt_Actions__c.field-meta.xml
<CustomField>
    <fullName>Track_and_Adapt_Actions__c</fullName>
    <label>Track and Adapt Actions</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>