force-app/main/default/objects/Training_Program_Feedback__c/fields/Training_Event__c.field-meta.xml
<CustomField>
    <fullName>Training_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Event</label>
    <referenceTo>Training_Event__c</referenceTo>
    <relationshipLabel>Training Programs Feedback</relationshipLabel>
    <relationshipName>Training_Programs_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>