force-app/main/default/objects/Training_Program_Feedback__c/fields/Type_of_CM_Solutions_Interested_In__c.field-meta.xml
<CustomField>
    <fullName>Type_of_CM_Solutions_Interested_In__c</fullName>
    <label>Type of CM Solutions Interested In</label>
    <length>100</length>
    <type>Text</type>
</CustomField>