force-app/main/default/objects/Training_Program_Feedback__c/fields/Understand_PCT_Model__c.field-meta.xml
<CustomField>
    <fullName>Understand_PCT_Model__c</fullName>
    <label>Understand PCT Model</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>