force-app/main/default/objects/Training_Program_Feedback__c/fields/Understand_Value_6_mo__c.field-meta.xml
<CustomField>
    <fullName>Understand_Value_6_mo__c</fullName>
    <label>Understand Value (6 mo)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>