force-app/main/default/objects/Training_Program_Feedback__c/fields/Understanding_the_current_change_Ability__c.field-meta.xml
<CustomField>
    <fullName>Understanding_the_current_change_Ability__c</fullName>
    <label>Understanding the current change-Ability</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>