force-app/main/default/objects/Training_Program_Feedback__c/fields/Use_comments_in_marketing__c.field-meta.xml
<CustomField>
    <fullName>Use_comments_in_marketing__c</fullName>
    <label>Use comments in marketing</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>