force-app/main/default/objects/Training_Program_Feedback__c/fields/Using_Prosci_Methodology_3_mo__c.field-meta.xml
<CustomField>
    <fullName>Using_Prosci_Methodology_3_mo__c</fullName>
    <label>Using Prosci Methodology (3 mo)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>