force-app/main/default/objects/Training_Program_Feedback__c/fields/Valuable_takeaways_from_this_training__c.field-meta.xml
<CustomField>
    <fullName>Valuable_takeaways_from_this_training__c</fullName>
    <label>Valuable takeaways from this training?</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>