force-app/main/default/objects/Training_Program_Feedback__c/fields/Venue_Experience__c.field-meta.xml
<CustomField>
    <fullName>Venue_Experience__c</fullName>
    <label>Venue Experience</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>