force-app/main/default/objects/Training_Program_Feedback__c/fields/Would_you_like_to_speak_to_an_advisor__c.field-meta.xml
<CustomField>
    <fullName>Would_you_like_to_speak_to_an_advisor__c</fullName>
    <label>Would you like to speak to an advisor?</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>