force-app/main/default/objects/Training_Program_Feedback__c/fields/X1_Did_not_meet__c.field-meta.xml
<CustomField>
    <fullName>X1_Did_not_meet__c</fullName>
    <label>Z1-Did not meet</label>
    <length>5</length>
    <type>Text</type>
</CustomField>