force-app/main/default/objects/Training_Program_Feedback__c/fields/X1_Exceeded__c.field-meta.xml
<CustomField>
    <fullName>X1_Exceeded__c</fullName>
    <label>Z1-Exceeded</label>
    <length>5</length>
    <type>Text</type>
</CustomField>