force-app/main/default/objects/Training_Program_Feedback__c/fields/X2_Exceeded_del__c.field-meta.xml
<CustomField>
    <fullName>X2_Exceeded_del__c</fullName>
    <label>2-Exceeded</label>
    <length>5</length>
    <type>Text</type>
</CustomField>