force-app/main/default/objects/Training_Program_Feedback__c/fields/X3_Nearly_met_del__c.field-meta.xml
<CustomField>
    <fullName>X3_Nearly_met_del__c</fullName>
    <label>3-Nearly met</label>
    <length>5</length>
    <type>Text</type>
</CustomField>