force-app/main/default/objects/Training_Program_Feedback__c/fields/X4_Did_not_meet_del__c.field-meta.xml
<CustomField>
    <fullName>X4_Did_not_meet_del__c</fullName>
    <label>4-Did not meet</label>
    <length>5</length>
    <type>Text</type>
</CustomField>